playbooks-old/yaml/argocd-apps/sonarr/ingress.yaml
# playbooks/yaml/argocd-apps/sonarr/ingress.yaml
# Ingress for Sonarr
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.soyspray.vip
      secretName: sonarr-tls
  rules:
    - host: sonarr.soyspray.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
